--- a/about.html
+++ b/about.html
@@ -10,6 +10,12 @@
 
     <!-- Big CSS -->
     <link href="css/styles.css" rel="stylesheet">
+
+    <!-- Javascripts -->
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+
+
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
