--- a/band.html
+++ b/band.html
@@ -12,8 +12,8 @@
     <link href="css/styles.css" rel="stylesheet">
 
     <!-- Javascripts -->
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.min.js"></script>
 
 
     <!-- front awesome -->
