--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <!-- Big CSS -->
     <link href="css/styles.css" rel="stylesheet">
 
-    <!-- Javascripts -->
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.min.js"></script>
-
 
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -32,15 +28,21 @@
 </head>
 
 <body>
-
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     
 <div>
 	<i class="fa fa-twitter"></i>
 	<i class="fa fa-soundcloud"></i>
 	<i class="fa fa-youtube"></i>
 	<i class="fa fa-facebook"></i>
-</div>
-        <!-- Navigation -->
+</div>        <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -85,7 +87,14 @@
     <!-- Page Content -->
     <div class="container">
 
-       <!-- Carousel ================================================== -->
+
+
+        <!-- Introduction Row -->
+        <div class="row">
+                <h1 class="page-header">Welcome to
+                    <small>Everdeen Music</small>
+                </h1>
+           <!-- Carousel ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -135,40 +144,21 @@
       </a>
     </div><!-- /.carousel -->
 
-
-        <!-- Introduction Row -->
-        <div class="row">
-                <h1 class="page-header">Everdeen
-                    <small>Bio</small>
-                </h1>
-            <div class="col-xs-offset-1 col-xs-10 col-md-offset-0 col-md-7">
-                <p><b>EVERDEEN</b> is an indie/folk/rock band from Stuttgart, Germany and San Francisco. Comparable to artists such as Yeah Yeah Yeahs, Coldplay, Angus &amp; Julia Stone, the band has recently released their album, <b>PERFECT LINES</b>, produced by <b>BENNO RICHTER</b>. The ten-song album is underpinned by the ethereal and emotional voice of singer <b>SÜMEYRA</b>, accompanied by the manifold guitar textures of <b>IAN STAHL</b>. Everdeen's sound on Perfect Lines is marked by dynamics, and ranges from delicate, sylvan folk of "Don't Look Behind" to the racous indie-rock dissonance of "In A Whisper."</p>
-
-                <p>In 2011 singer/guitarist Sümeyra met guitarist/multi-instrumentalist Ian while studying music in San Francisco. From the beginning it was clear that they had a creative connection and immediately started writing original material together.</p>
-
-                <p>Prior to Everdeen, singer Sümeyra had already established a career as a solo artist, which included the release of an album entitled <b>“THOUGHTS”</b> and a tour throughout southern Germany in 2010. The beginning of her collaboration with Ian coincided with her discovery of an array of new influences which would shape Everdeen's nascent sound.</p>
-
-                <p>After relocating to Stuttgart, Germany in early 2014 Everdeen began writing and recording what would become their first full-length album "Perfect Lines". Armed with both classic and cutting-edge influences the group is currently performing shows in the Stuttgart area, accompanied on stage by drummer <b>JOHN WILLIAMSON</b>, bassist <b>RUSSELL SNYDER</b>, and cellist <b>HALINA WILLIAMS</b>.<p>
-            </div>
-            
-            <div class="col-xs-8 col-xs-offset-2 col-md-offset-0 col-md-5">
-                <img src="img/IanAndSam.jpg" class="img-responsive" alt="photo of Ian and Sumeyra">
-
-                <ul>
-                    <h3>Live<small>Band</small></h3>
-                    <li>Sümeyra (Singer, Guitar, Keys)</li>
-                    <li>Ian Stahl (Guitar, Keys)</li>
-                    <li>John Williamson (Drums)</li>
-                    <li>Russell Snyder (Bass)</li>
-                    <li>Halina Stevens (Cello)  </li>
-
-                </ul>
-
             </div>
 
         </div>
 
  
+       <div class="row">
+            <div class="xs-12 md-7">
+               <h2>We are Everdeen</h2>
+               <p>knock over christmas tree attack feet hiss at vacuum cleaner i like big cats and i can not lie. Destroy the blinds cat snacks inspect anything brought into the house. Pelt around the house and up and down stairs chasing phantoms. Destroy couch cough furball so intrigued by the shower. Pelt around the house and up and down stairs chasing phantoms favor packaging over toy poop in litter box, scratch the walls destroy couch. <a href="about.html">Read more about us</a>  </p> 
+            </div>
+            <div class="xs-12 md-5">
+                <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="300px;" data-height="500px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic">Everdeen</a></blockquote></div></div>
+            </div>
+         </div>
+
 
         <!-- Footer -->
         <footer>
@@ -184,7 +174,8 @@
     </div>
     <!-- /.container -->
 
-    <!-- jQuery -->
+
+        <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
