--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 
  
        <div class="row">
-            <div class="xs-12 md-7">
+            <div class="col-xs-12 col-md-7">
                <h2>We are Everdeen</h2>
                <p>knock over christmas tree attack feet hiss at vacuum cleaner i like big cats and i can not lie. Destroy the blinds cat snacks inspect anything brought into the house. Pelt around the house and up and down stairs chasing phantoms. Destroy couch cough furball so intrigued by the shower. Pelt around the house and up and down stairs chasing phantoms favor packaging over toy poop in litter box, scratch the walls destroy couch. <a href="about.html">Read more about us</a>  </p> 
             </div>
-            <div class="xs-12 md-5">
+            <div class="col-xs-12 col-md-5">
                 <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="300px;" data-height="500px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic">Everdeen</a></blockquote></div></div>
             </div>
          </div>
