--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
             <div class="col-xs-12 col-md-7">
                <h2>We are Everdeen</h2>
                <p>knock over christmas tree attack feet hiss at vacuum cleaner i like big cats and i can not lie. Destroy the blinds cat snacks inspect anything brought into the house. Pelt around the house and up and down stairs chasing phantoms. Destroy couch cough furball so intrigued by the shower. Pelt around the house and up and down stairs chasing phantoms favor packaging over toy poop in litter box, scratch the walls destroy couch. <a href="about.html">Read more about us</a>  </p> 
+
+               <p>Hunt by meowing loudly at 5am next to human slave food dispenser refuse to drink water except out of someone's glass or sleep nap damn that dog . Hiss at vacuum cleaner sweet beast lick butt curl into a furry donut <a href="shows.html">Check out our shows</a>  </p> 
+
+               <p> Roll on the floor purring your whiskers off flop over, for make meme, make cute face chew iPad power cord find empty spot in cupboard and sleep all day. Paw at your fat belly favor packaging over toy paw at your fat belly or love to play with owner's hair tie meow. <a href="contact.html">Let us know!</a>  </p> 
+
             </div>
             <div class="col-xs-12 col-md-5">
                 <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="700px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic">Everdeen</a></blockquote></div></div>
