--- a/band.html
+++ b/band.html
@@ -31,10 +31,43 @@
 
     
 <div>
-	<i class="fa fa-twitter"></i>
-	<i class="fa fa-soundcloud"></i>
-	<i class="fa fa-youtube"></i>
-	<i class="fa fa-facebook"></i>
+
+	<a href="https://twitter.com/everdeentheband" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-twitter fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-soundcloud fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-facebook fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-youtube fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-headphones fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="live.html#gallery" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-camera-retro fa-stack-1x"></i>
+		</span>
+	</a>
 </div>
         <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -52,17 +85,30 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="about.html">About</a>
+                    <li class="dropdown">
+                      <a href="about.html" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a> 
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="about.html#bio">Bio</a></li>
+                        <li><a href="about.html#band">Band</a></li>
+                        <li><a href="about.html#epk">EPK</a></li>
+                      </ul>                
                     </li>
-                    <li>
-                        <a href="music.html">Music</a>
+                    <li class="dropdown">
+                      <a href="music.html" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>               
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="music.html#perfect_lines">Album: Perfect Lines</a></li>
+                        <li class="divider"></li>
+                        <li><a href="music.html#video1">Music Video</a></li>
+                      </ul>                
                     </li>
-                    <li>
-                        <a href="band.html">Band</a>
-                    </li>
-                    <li>
-                        <a href="shows.html">Shows</a>
+                    <li class="dropdown">
+                      <a href="shows.html" class="dropdown-toggle" data-toggle="dropdown">See Us <span class="caret"></span></a>               
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="shows.html#upcoming">Upcoming Shows</a></li>
+                        <li><a href="shows.html#previous">Previous Shows</a></li>
+                        <li class="divider"></li>
+                        <li><a href="shows.html#photos">Photo Gallery</a></li>
+                      </ul>                
                     </li>
                     <li>
                         <a href="merch.html">Merch</a>
@@ -143,7 +189,7 @@
         <hr>
 
         <!-- Footer -->
-        <footer>
+                <footer>
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Your Website 2014</p>
@@ -153,10 +199,10 @@
             <!-- /.row -->
         </footer>
 
-    </div>
-    <!-- /.container -->
 
-    <!-- jQuery -->
+    </div><!-- /.container -->
+
+            <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
