--- a/index.html
+++ b/index.html
@@ -36,13 +36,56 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+    <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2350462305/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
+    
+    <div class="socialLand">
     
 <div>
-	<i class="fa fa-twitter"></i>
-	<i class="fa fa-soundcloud"></i>
-	<i class="fa fa-youtube"></i>
-	<i class="fa fa-facebook"></i>
-</div>        <!-- Navigation -->
+
+	<a href="https://twitter.com/everdeentheband" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-twitter fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-soundcloud fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-facebook fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-youtube fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-headphones fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="live.html#gallery" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-camera-retro fa-stack-1x"></i>
+		</span>
+	</a>
+</div>    </div>
+
+    <!-- Page Content -->
+    <div class="container">
+
+    <img class="img img-responsive" src="img/cover.jpg">
+
+        <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -58,17 +101,30 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="about.html">About</a>
+                    <li class="dropup">
+                      <a href="about.html" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a> 
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="about.html#bio">Bio</a></li>
+                        <li><a href="about.html#band">Band</a></li>
+                        <li><a href="about.html#epk">EPK</a></li>
+                      </ul>                
                     </li>
-                    <li>
-                        <a href="music.html">Music</a>
+                    <li class="dropup">
+                      <a href="music.html" class="dropdown-toggle" data-toggle="dropdown">Music <span class="caret"></span></a>               
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="music.html#perfect_lines">Album: Perfect Lines</a></li>
+                        <li class="divider"></li>
+                        <li><a href="music.html#video1">Music Video</a></li>
+                      </ul>                
                     </li>
-                    <li>
-                        <a href="band.html">Band</a>
-                    </li>
-                    <li>
-                        <a href="shows.html">Shows</a>
+                    <li class="dropup">
+                      <a href="shows.html" class="dropdown-toggle" data-toggle="dropdown">See Us <span class="caret"></span></a>               
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="shows.html#upcoming">Upcoming Shows</a></li>
+                        <li><a href="shows.html#previous">Previous Shows</a></li>
+                        <li class="divider"></li>
+                        <li><a href="shows.html#photos">Photo Gallery</a></li>
+                      </ul>                
                     </li>
                     <li>
                         <a href="merch.html">Merch</a>
@@ -82,69 +138,6 @@
         </div>
         <!-- /.container -->
     </nav>
-
-
-    <!-- Page Content -->
-    <div class="container">
-
-
-
-        <!-- Introduction Row -->
-        <div class="row">
-                <h1 class="page-header">Welcome to
-                    <small>Everdeen Music</small>
-                </h1>
-           <!-- Carousel ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="img/live1.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="img/live2.jpg" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="img/live3.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
-
-            </div>
 
 
  
