making it kinda pretty

--- a/about.html
+++ b/about.html
@@ -29,46 +29,6 @@
 
 <body>
 
-    
-<div>
-
-	<a href="https://twitter.com/everdeentheband" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-twitter fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-soundcloud fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-facebook fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-youtube fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-headphones fa-stack-1x"></i>
-		</span>
-	</a>
-	<a href="live.html#gallery" target="_blank">
-		<span class="fa-stack fa-lg">
-		  <i class="fa fa-square-o fa-stack-2x"></i>
-		  <i class="fa fa-camera-retro fa-stack-1x"></i>
-		</span>
-	</a>
-</div>
         <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -129,9 +89,54 @@
 
         <!-- Introduction Row -->
         <div class="row">
-                <h1 id="bio" class="page-header">Everdeen
+            <div class="xs-col-12 sm-col-6 xs-col-pull-3">
+        
+<div class="social">
+	<a href="https://twitter.com/everdeentheband" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-twitter fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-soundcloud fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-facebook fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-youtube fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-headphones fa-stack-1x"></i>
+		</span>
+	</a>
+	<a href="live.html#gallery" target="_blank">
+		<span class="fa-stack fa-lg">
+		  <i class="fa fa-square-o fa-stack-2x"></i>
+		  <i class="fa fa-camera-retro fa-stack-1x"></i>
+		</span>
+	</a>
+</div>            </div>
+            <div class="xs-col-12 sm-col-6">
+                <h1 id="bio" class="inline">Everdeen
                     <small>Bio</small>
                 </h1>
+            </div>
+        </div>
+        <div class="row">
+
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-0 col-md-7 ">
                 <p><b>EVERDEEN</b> is an indie/folk/rock band from Stuttgart, Germany and San Francisco. Comparable to artists such as Yeah Yeah Yeahs, Coldplay, Angus &amp; Julia Stone, the band has recently released their album, <b>PERFECT LINES</b>, produced by <b>BENNO RICHTER</b>. The ten-song album is underpinned by the ethereal and emotional voice of singer <b>SÜMEYRA</b>, accompanied by the manifold guitar textures of <b>IAN STAHL</b>. Everdeen's sound on Perfect Lines is marked by dynamics, and ranges from delicate, sylvan folk of "Don't Look Behind" to the racous indie-rock dissonance of "In A Whisper."</p>
 
@@ -146,53 +151,55 @@
                 <img src="img/live2.jpg" class="img-responsive ">
             </div>
         </div><!-- end row -->
+    </div>
+    <div class="container">
         <!-- Team Members Row -->
         <div class="row">
-            <div class="row">
-                <h2 id="band" class="page-header">The Band</h2>
-                <div class="col-xs-12 col-sm-6 text-center">
-                    <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Sümeyra's in a cool pose">
-                    <h3>Sümeyra 
-                        <small>Singer, Guitar, Keys</small>
-                    </h3>
-                    <p>Prior to Everdeen, singer Sümeyra had already established a career as a solo artist, which included the release of an album entitled “THOUGHTS” and a tour throughout southern Germany in 2010</p>
-                </div>
-                <div class="col-xs-12 col-sm-6 text-center">
-                    <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Ian in a cool pose">
-                    <h3>Ian Stahl
-                        <small>Guitar, Keys</small>
-                    </h3>
-                    <p>Ian is really cool and wants you to know this about himself.  Its really important that you know this thing also.  Also this.  And this.  Awesome!</p>
-                </div>
+            <h2 id="band">The Band</h2>
+            <div class="col-xs-12 col-sm-6 text-center">
+                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Sümeyra's in a cool pose">
+                <h3>Sümeyra 
+                    <small>Singer, Guitar, Keys</small>
+                </h3>
+                <p>Prior to Everdeen, singer Sümeyra had already established a career as a solo artist, which included the release of an album entitled “THOUGHTS” and a tour throughout southern Germany in 2010</p>
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-4 text-center">
-                    <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="John in a cool pose">
-                    <h3>John Williamson 
-                        <small>Drums, Cymbals</small>
-                    </h3>
-                    <p>John is really cool and wants you to know this about himself.  Its really important that you know this thing also.  Also this.  And this.  Awesome!</p>
-                </div>
-                <div class="col-xs-12 col-sm-4 text-center">
-                    <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Russell in a cool pose">
-                    <h3>Russell Snyder 
-                        <small>Bass</small>
-                    </h3>
-                    <p>Russell plays the bass.  He also does <a href="http//:russellsnyder.io" target="_blank">webdesign</a>.  Boom.</p>
-                </div>
-                <div class="col-xs-12 col-sm-4 text-center">
-                    <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Halina">
-                    <h3>Halina Stevens
-                        <small>Cello</small>
-                    </h3>
-                    <p>Helina is just great.  Really gifted musician and jazz singer.  She's just tops.  Follow her on her new website coming soon!</p>
-                </div>
+            <div class="col-xs-12 col-sm-6 text-center">
+                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Ian in a cool pose">
+                <h3>Ian Stahl
+                    <small>Guitar, Keys</small>
+                </h3>
+                <p>Ian is really cool and wants you to know this about himself.  Its really important that you know this thing also.  Also this.  And this.  Awesome!</p>
             </div>
-        </div><!-- end of bigger row -->
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-4 text-center">
+                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="John in a cool pose">
+                <h3>John Williamson 
+                    <small>Drums, Cymbals</small>
+                </h3>
+                <p>John is really cool and wants you to know this about himself.  Its really important that you know this thing also.  Also this.  And this.  Awesome!</p>
+            </div>
+            <div class="col-xs-12 col-sm-4 text-center">
+                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Russell in a cool pose">
+                <h3>Russell Snyder 
+                    <small>Bass</small>
+                </h3>
+                <p>Russell plays the bass.  He also does <a href="http//:russellsnyder.io" target="_blank">webdesign</a>.  Boom.</p>
+            </div>
+            <div class="col-xs-12 col-sm-4 text-center">
+                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Halina">
+                <h3>Halina Stevens
+                    <small>Cello</small>
+                </h3>
+                <p>Helina is just great.  Really gifted musician and jazz singer.  She's just tops.  Follow her on her new website coming soon!</p>
+            </div>
+        </div>
+    </div><!-- end of container-->
  
         <!-- Introduction Row -->
+    <div class="container">
         <div class="row">
-                <h1 id="epk" class="page-header">EPK
+                <h1 id="epk">EPK
                     <small>Book us today!</small>
                 </h1>
                 <p>Coming soon!</p>
