--- a/index.html
+++ b/index.html
@@ -36,12 +36,21 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-    <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2350462305/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
-    
-    <div class="socialLand">
-    
-<div>
+    <div class="container">
 
+        <div class="row welcome">
+            <div class="col-xs-12">
+            <iframe class="tiny-player col-centered" style="border: 0; height: 43px;" src="https://bandcamp.com/EmbeddedPlayer/album=2350462305/size=small/bgcol=ffffff/linkcol=333333/artwork=none/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
+        </div>
+
+    <!-- Page Content -->
+
+        <div class="row welcome">
+            <div class="col-xs-10 cover-photo img-responsive">
+                <img class="img img-responsive col-centered" src="img/cover.jpg">
+            </div>
+
+            <div class="social social-land col-xs-1">
 	<a href="https://twitter.com/everdeentheband" target="_blank">
 		<span class="fa-stack fa-lg">
 		  <i class="fa fa-square-o fa-stack-2x"></i>
@@ -78,22 +87,16 @@
 		  <i class="fa fa-camera-retro fa-stack-1x"></i>
 		</span>
 	</a>
-</div>    </div>
-
-    <!-- Page Content -->
-    <div class="container">
-
-    <img class="img img-responsive" src="img/cover.jpg">
-
-        <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
+</div>        </div>
+                <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="sr-only">Toggle navigation<i class="fa fa-bars"></i></span>
+                    <span class="fa fa-bars"></span>
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">EVERDEEN</a>
@@ -139,9 +142,8 @@
         <!-- /.container -->
     </nav>
 
-
  
-       <div class="row">
+<!--        <div class="row">
             <div class="col-xs-12 col-md-7">
                <h2>We are Everdeen</h2>
                <p>knock over christmas tree attack feet hiss at vacuum cleaner i like big cats and i can not lie. Destroy the blinds cat snacks inspect anything brought into the house. Pelt around the house and up and down stairs chasing phantoms. Destroy couch cough furball so intrigued by the shower. Pelt around the house and up and down stairs chasing phantoms favor packaging over toy poop in litter box, scratch the walls destroy couch. <a href="about.html">Read more about us</a>  </p> 
@@ -151,22 +153,16 @@
                <p> Roll on the floor purring your whiskers off flop over, for make meme, make cute face chew iPad power cord find empty spot in cupboard and sleep all day. Paw at your fat belly favor packaging over toy paw at your fat belly or love to play with owner's hair tie meow. <a href="contact.html">Let us know!</a>  </p> 
 
             </div>
+
             <div class="col-xs-12 col-md-5">
                 <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="700px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic">Everdeen</a></blockquote></div></div>
             </div>
-         </div>
+
+         </div> -->
 
 
         <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Everdeen Music 2015</p>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-        </footer>
+
 
     </div>
     <!-- /.container -->
