--- a/merch.html
+++ b/merch.html
@@ -30,8 +30,7 @@
 <body>
 
     
-<div>
-
+<div class="social">
 	<a href="https://twitter.com/everdeentheband" target="_blank">
 		<span class="fa-stack fa-lg">
 		  <i class="fa fa-square-o fa-stack-2x"></i>
