--- a/hear.html
+++ b/hear.html
@@ -88,11 +88,11 @@
         <li id="about">
           <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
         </li>
-        <li id="music">
-          <a href="music.html">Hear <i class="fa fa-music"></i></a>               
+        <li id="hear">
+          <a href="hear.html">Hear <i class="fa fa-music"></i></a>               
         </li>
-        <li id="shows">
-          <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
+        <li id="see">
+          <a href="see.html">See <i class="fa fa-eye"></i><i class="fa fa-eye fa-flip-horizontal"></i></a>               
         </li>
         <li id="support">
           <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
@@ -106,24 +106,17 @@
 </div><!-- /.container -->
 
 
-    <!-- Page Content -->
     <div class="container">
 
-        <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Our Sound
-                    <small>Our Music</small>
-                </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
-            </div>
-        </div>
+    <h1 class="page-header">Our Sound<br class="visible-xs visible-sm"> <small>Our Music</small></h1>
+                <p>We combine a wide range of sounds to bring you our unique style.  We are always working on new material so check back often.</p>
 
+    <section>
+    <div class="container">
         <div class="row">
             <h2 id="perfect_lines">Perfect Lines</h2>
-            <div class="col-xs-12 col-sm-6 col-md-7 img-responive">
-
-            <iframe style="border: 0; width: 100%; height: 550px;" src="https://bandcamp.com/EmbeddedPlayer/album=2350462305/size=large/bgcol=ffffff/linkcol=333333/minimal=true/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
+            <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-5 col-md-6 img-responive">
+                <iframe style="border: 2px; width: 100%; height: 350px;" src="http://bandcamp.com/EmbeddedPlayer/album=2350462305/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-5">
                 <p>Debut album from German/American indie rock band EVERDEEN. Female vocals reminiscent of Adele are accompanied by textural electric guitars. The dynamic arrangements of the album's ten tracks range from a folky whisper to a driving rock 'n' roll roar, often within the same song. released 30 December 2014</p>
@@ -133,30 +126,39 @@
                 <p>Special thanks to BENNO RICHTER at <a href="http://jam5.de" target="_blank">Jam5 Studio</a> who Produced, engineered, mixed, and mastered this album. </p>
             </div>
         </div>
+    </div>
+</section>
+
+
         <hr class="hidden-xs">
 
+
+<section>
+    <div class="container">
         <div class="row">
             <h2 id="video1">Music Videos</h2>
             <div class="row">
-                <div class="col-xs-12 col-sm-8 img-responive">
+                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-7 img-responive">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/JTCtzpQs08c" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
                     <h3>Helpless | Unplugged</h3>
                     <p>Live performance of the original song "Helpless" by the band Everdeen from Stuttgart, Germany</p>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-xs-6">
-                    <h3>Perfect Lines | Official Music Video</h3>
-                    <p>Coming soon!</p>
+                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
+                    <img src="img/recording_perfectlines.png" class="img-responsive">
                 </div>
-                <div class="col-xs-6">
-                <img src="img/live3.jpg" class="img-responsive">
+                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
+                    <h3>Perfect Lines | Official Music Video</h3>
+                    <p>Filmed on location in Stuttgart.  Currently under production</p>
+                    <p>Check out our <a href="https://www.facebook.com/everdeenmusic">facebook page</a> for more pictures of the recording session!</p>
                 </div>
             </div>
-
+    </div>
+</section>
 
         <!-- Footer -->
                 <footer>
