--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="">
       <ul class="nav navbar-nav navbar-custom">
         <div class="clearfix">
-          <li id="home" class="">
+          <li id="home" class="visible-xs">
             <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
           </li>
         </div>
@@ -144,7 +144,7 @@
           <a href="music.html">Hear <i class="fa fa-music"></i></a>               
         </li>
         <li id="shows">
-          <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
+          <a href="see.html">See <i class="fa fa-eye"></i><i class="fa fa-eye fa-flip-horizontal"></i></a>               
         </li>
         <li id="support">
           <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
