--- a/see.html
+++ b/see.html
@@ -88,11 +88,11 @@
         <li id="about">
           <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
         </li>
-        <li id="music">
-          <a href="music.html">Hear <i class="fa fa-music"></i></a>               
+        <li id="hear">
+          <a href="hear.html">Hear <i class="fa fa-music"></i></a>               
         </li>
-        <li id="shows">
-          <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
+        <li id="see">
+          <a href="see.html">See <i class="fa fa-eye"></i><i class="fa fa-eye fa-flip-horizontal"></i></a>               
         </li>
         <li id="support">
           <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
