fixed the nag link

--- a/see.html
+++ b/see.html
@@ -120,7 +120,7 @@
 
         <!-- Introduction Row -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-10">
                 <h1 class="page-header">We Get Around
                     <small> Take a look</small>
                 </h1>
@@ -174,7 +174,7 @@
             <aside>
                 <div class="col-md-4">
                     <h3>Facebook photos</h3>
-                    <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="700px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true">
+                    <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="300px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true">
                         <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic"></a></blockquote></div>
                     </div>
                 </div>
@@ -220,10 +220,6 @@
                     </ul>
                 </div><!-- col-md-8 end -->
                 <aside>
-                    <div class="col-md-4">
-                        <h3>In the Studio</h3>
-                        <div class="fb-post" data-href="https://www.facebook.com/everdeenmusic/photos/a.750892901649900.1073741828.199764830096046/750892541649936/?type=1" data-width="500"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic/photos/a.750892901649900.1073741828.199764830096046/750892541649936/?type=1">Posted by <a href="https://www.facebook.com/everdeenmusic">Everdeen</a> on&nbsp;<a href="https://www.facebook.com/everdeenmusic/photos/a.750892901649900.1073741828.199764830096046/750892541649936/?type=1">Sunday, December 7, 2014</a></blockquote></div></div>                
-                    </div>
                 </aside>
             </article>
         </div> <!-- end row -->
@@ -249,12 +245,12 @@
                             <img src="img/Ian_lonely.jpg" class="img-thumbnail"></a>
                         </li>
                         <li>
-                            <a href="img/IanAndSam.jpg.jpg" 
+                            <a href="img/IanAndSam.jpg" 
                                 data-title="Image Three" 
                                 data-footer="This is image 3" 
                                 title="This is image one"
                                     data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                                    >
-                            <img src="img/IanAndSam.jpg.jpg" class="img-thumbnail"></a>
+                            <img src="img/IanAndSam.jpg" class="img-thumbnail"></a>
                         </li>
                         <li>
                             <a href="img/InLove.jpg" 
@@ -291,10 +287,6 @@
                     </ul>
                 </div><!-- col-md-8 end -->
                 <aside>
-                    <div class="col-md-4">
-                        <h3>In the Studio</h3>
-                        <div class="fb-post" data-href="https://www.facebook.com/everdeenmusic/photos/a.545300035542522.1073741826.199764830096046/743969159008941/?type=1" data-width="500"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic/photos/a.545300035542522.1073741826.199764830096046/743969159008941/?type=1">Posted by <a href="https://www.facebook.com/everdeenmusic">Everdeen</a> on&nbsp;<a href="https://www.facebook.com/everdeenmusic/photos/a.545300035542522.1073741826.199764830096046/743969159008941/?type=1">Monday, November 24, 2014</a></blockquote></div></div>                    
-                    </div>
                 </aside>
 
             </article>
