--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
         <section>
           <div class="row">
-                <div class="col-xs-12 col-sm-5">
+                <div class="col-xs-12 col-sm-3">
                    <h2>Upcoming Shows:</h2>
                    <ul>August 14th:
                         <li>In beautiful <a href="http://www.winnenden.de/,Lde/start/kultur-sport-tourismus/Kunsttreff+Marktbrunnen.html">Winnenden</a></li>
                    </ul>
                 </div>
 
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-9">
                 <h3>Facebook Feed</h3>
                     <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="700px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true">
                         <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic"></a></blockquote></div>
@@ -140,10 +140,10 @@
         <li id="about">
           <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
         </li>
-        <li id="music">
-          <a href="music.html">Hear <i class="fa fa-music"></i></a>               
+        <li id="hear">
+          <a href="hear.html">Hear <i class="fa fa-music"></i></a>               
         </li>
-        <li id="shows">
+        <li id="see">
           <a href="see.html">See <i class="fa fa-eye"></i><i class="fa fa-eye fa-flip-horizontal"></i></a>               
         </li>
         <li id="support">
