fixing nav abar

--- a/see.html
+++ b/see.html
@@ -130,7 +130,9 @@
 
     <section id="photo-gallery">
     <div class="container">
-        <h1 class="page-header">Photos</h1>
+        <div class="row">
+        <h1 class="col-lg-10">Photos</h1>
+        </div>        
         <div class="row">
             <article>
                 <h2>Photo Shoot <small>July 2015</small></h2>
